--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy
-streamlit
-streamlit-webrtc
-pillow
-mediapipe
-opencv-python
+mediapipe==0.10.0
+opencv-python==4.7.0.72
+numpy>=1.21.0
+streamlit>=1.18.0
+streamlit-webrtc==0.47.6
+pillow>=9.0.0
