--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,22 @@
 .DS_Store
 movenet_single_pose_lightning.tflite
 myenv/
+myenv3.9/
+__pycache__/
+app.log
+data/
+data_prep.py
+image/
+logger.py
+output_graph.pkl
+output_graphs.json
+output_graphs.pkl
+output_keypoints.pkl
+output_keypoints/
+output_keypoints_with_edges_angles.csv
+output_keypoints_with_edges_angles.json
+test1.mp4
+test_short.mp4
+trainingdata/
+yoga_video.mp4
+video/
