--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,9 @@ opencv-python==4.7.0.72
 numpy>=1.21.0
 streamlit>=1.18.0
 streamlit-webrtc==0.47.6
-pillow>=9.0.0
+Pillow>=9.0.0
+networkx
+joblib
+scikit-learn
+pandas
+matplotlib
