--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 mediapipe
-opencv-python==4.7.0.72
+# opencv-python==4.7.0.72
+opencv-python-headless
 numpy>=1.21.0
 streamlit>=1.18.0
 streamlit-webrtc==0.47.6
