--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ mediapipe
 opencv-python-headless
 numpy>=1.21.0
 streamlit>=1.18.0
-streamlit-webrtc==0.47.6
+streamlit-webrtc
 Pillow>=9.0.0
 networkx
 joblib
